--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
     "date-fns": "^4.1.0",
+    "html-react-parser": "^5.2.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
