--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tiptap/pm": "^2.23.0",
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
+    "ag-grid-community": "^34.1.1",
+    "ag-grid-react": "^34.1.1",
     "date-fns": "^4.1.0",
     "html-react-parser": "^5.2.5",
     "jsonwebtoken": "^9.0.2",
