--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^9.0.6",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-character-count": "^2.23.0",
     "@tiptap/extension-history": "^2.23.0",
