Test category changes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,13 @@
 				"$tsc"
 			],
 			"group": "build"
+		},
+		{
+			"label": "typecheck (tsc --noEmit)",
+			"type": "shell",
+			"command": "npx tsc --noEmit",
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
