Fix path in actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd /opt/evalus
+            cd /opt/evalus/evalusdevui
             docker compose pull
             docker compose up -d
             docker image prune -f
