Update deployment environments

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: Dev
+    environment: Production
 
     steps:
       - uses: actions/checkout@v4
